--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ table{
 }
 
 div.slika1:hover{
-    background-image: url(slova/a_novo.jpg);
+    background-image: url(slova/a.jpg);
 }
 
 .skriveni1,
