--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@ div.slika1:hover{
 <center>
 <table align = "center">
 <tr>
-<img src = "sr.png" width = "100%" />
+<img src = "sr2.png" width = "100%" />
 
 <section id="clouds">
 		<div class="Blittle BC-2"><img src="balloon1.png" alt="balloon"></div>
