--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>  SRETAN ROĐENDAN NEJRA </title>
-
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 <style type="text/css">
 
 table{
